--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
+    "express-sanitizer": "^1.0.5",
     "express-session": "^1.17.1",
+    "locus": "^2.0.4",
     "method-override": "^3.0.0",
     "mongoose": "^5.9.12",
     "node-geocoder": "^3.27.0",
