--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "express": "^4.17.1",
     "express-sanitizer": "^1.0.5",
     "express-session": "^1.17.1",
+    "faker": "^5.5.2",
+    "joi": "^17.4.0",
     "locus": "^2.0.4",
     "method-override": "^3.0.0",
-    "mongoose": "^5.9.12",
+    "mongoose": "^5.12.2",
+    "morgan": "^1.10.0",
     "node-geocoder": "^3.27.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1"
+    "passport-local-mongoose": "^6.0.1",
+    "url-pattern": "^1.0.3"
   }
 }
