--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-sanitizer": "^1.0.5",
     "express-session": "^1.17.1",
     "faker": "^5.5.2",
+    "geoip-lite": "^1.4.2",
     "joi": "^17.4.0",
     "locus": "^2.0.4",
     "method-override": "^3.0.0",
